[package]
name = "gh-autopr"
version = "0.1.0"
edition = "2021"

[lib]
name = "gh_autopr"
path = "src/lib.rs"

[[bin]]
name = "gh-autopr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"
reqwest = { version = "0.13", features = ["json"] }
dirs = "6.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
ratatui = "0.30.0"
keyring = "3.6.1"
once_cell = "1.21.3"
fs-err = "3.1.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
mockall = "0.14"
serde_json = "1.0"
httpmock = "0.8"
serial_test = "3.2"
